<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="nama">Nama</string>
    <string name="description">Deskripsi</string>
    <string name="tambah">Tambah</string>
    <string name="logout">Keluar</string>
    <string name="ubah_bahasa">Ubah Bahasa</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="tambah_story">Tambah Story</string>
    <string name="preview_image">Pratinjau Gambar</string>
    <string name="kirim">Kirim</string>
    <string name="greeting">Selamat Kembali!</string>
    <string name="petunjuk">Masuk ke akun Anda</string>
    <string name="petunjuk_register">Belum Punya Akun ?</string>
    <string name="register">Buat Akun</string>
    <string name="greeting_register">Buat Akun Baru</string>
    <string name="petunjuk_form">Isi formulir untuk melanjutkan</string>
    <string name="petunjuk_login">Sudah Punya Akun ?</string>
    <string name="title_keluar_aplikasi">Keluar dari Aplikasi</string>
    <string name="message_keluar_aplikasi">Apakah Anda yakin ingin keluar dari aplikasi?</string>
    <string name="yakin">Yakin</string>
    <string name="batal">Batal</string>
    <string name="message_logout">Apakah Anda yakin ingin keluar?</string>
    <string name="title_keluar_akun">Keluar Akun</string>
    <string name="validasi_email">Email tidak valid</string>
    <string name="error_email">Alamat Email tidak sesuai</string>
    <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="error_data">Data tidak ditemukan</string>
    <string name="success_upload">Berhasil diupload</string>
    <string name="error_image">Gambar tidak ditemukan</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="include_location">Tambahkan lokasi saya</string>
    <string name="error_lokasi">Lokasi tidak ditemukan. Coba lagi</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="timeout">Timeout</string>
    <string name="story_location">Story Location</string>
</resources>